integration/fixtures/k8s-session-persistence/gateway-sticky-missing/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-missing
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-missing.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-missing
          port: 80
      sessionPersistence:
        sessionName: sticky-missing
        type: Cookie
        cookieConfig:
          lifetimeType: Session
